apps/calidum-rotae/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calidum-rotae-ingress
  namespace: calidum-rotae
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - secretName: calidum-rotae-service-tls
      hosts:
        - calidum-rotae.etsmtl.ca
  rules:
    - host: calidum-rotae.etsmtl.ca
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: calidum-rotae-service
                port:
                  number: 3000
